2011-06-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added quotes to process
	database functions to avoid errors when the tables
	will have key words names

	* lib/PandoraFMS/Core.pm: Fixed a bug change the position
	of two conditions to avoid a notice

2011-06-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a typo.

2011-06-15  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Added FreeBSD specific code to load_average()
	  and free_mem() functions.

2011-06-13  Sancho Lerena <slerena@artica.es>

	* Tools.pm: Avoid errors when provide an empty string to md5.

	* NetworkServer.pm: Avoid warning messages on pandora_server.error

2011-06-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the group of an agent.

	* lib/PandoraFMS/Core.pm: Fixed a prototype.

2011-06-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Use commas to separate tags.

2011-06-08  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the name of an alert
	  template given the alert id.
	
	* lib/PandoraFMS/Core.pm: Added support for module tags.
	
	* lib/PandoraFMS/DataServer.pm: Do not queue more than max_queue_files
	  files (not max_queue_files + 1!).

2011-06-06  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Use days_compact instead of days_purge in
	  pandora_compactdb.

2011-06-03  SanchO Lerena <slerena@artica.es>

	* pandora_inventory_change.pl
	pandora_inventory_change.README: New remote plugin to check changes
	in inventory, using a direct database check (only MySQL supported).

2011-06-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Do not include BADXML files when
	  evaluating max_queue_files.

2011-05-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed the query to get the number of unknown
	  agents. Thanks to Koichiro.

2011-05-30  Ramon Novoa  <rnovoa@artica.es>
