@@ -236,7 +236,10 @@ sub pandora_load_config {
 	$pa_config->{'openstreetmaps_description'} = 0;
 	$pa_config->{"eventserver"} = 1; # 4.0
 	$pa_config->{"event_window"} = 3600; # 4.0
-
+	$pa_config->{"icmpserver"} = 1; # 4.0
+	$pa_config->{"icmp_threads"} = 3; # 4.0
+	$pa_config->{"block_size"} = 50; # 4.0
+	
 	$pa_config->{"max_queue_files"} = 500; 
 
 	# Internal MTA for alerts, each server need its own config.
@@ -437,6 +440,12 @@ sub pandora_load_config {
 		elsif ($parametro =~ m/^eventserver\s([0-9]*)/i) {
 			$pa_config->{'eventserver'}= clean_blank($1);
 		}
+		elsif ($parametro =~ m/^icmpserver\s([0-9]*)/i) {
+			$pa_config->{'icmpserver'}= clean_blank($1);
+		}
+		elsif ($parametro =~ m/^icmp_threads\s([0-9]*)/i) {
+			$pa_config->{'icmp_threads'}= clean_blank($1);
+		}
 		elsif ($parametro =~ m/^servername\s(.*)/i) { 
 			$pa_config->{'servername'}= clean_blank($1);
 		}
@@ -587,6 +596,9 @@ sub pandora_load_config {
 		}
 		elsif ($parametro =~ m/^event_window\s([0-9]*)/i) {
 			$pa_config->{'event_window'}= clean_blank($1);
+		}
+		elsif ($parametro =~ m/^block_size\s([0-9]*)/i) {
+			$pa_config->{'block_size'}= clean_blank($1);
 		}
 	} # end of loop for parameter #
 
