@@ -95,8 +95,9 @@ sub data_producer ($) {
 		AND tagente_modulo.id_agente = tagente.id_agente
 		AND tagente.disabled = 0
 		AND tagente_modulo.id_tipo_modulo > 4
-		AND tagente_modulo.id_tipo_modulo < 19
-		AND tagente_modulo.disabled = 0
+		AND tagente_modulo.id_tipo_modulo < 19'
+		. enterprise_hook ('get_network_filter', []) .
+		'AND tagente_modulo.disabled = 0
 		AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
 		AND (tagente_modulo.flag = 1 OR ((tagente_estado.last_execution_try + tagente_estado.current_interval) < UNIX_TIMESTAMP())) 
 		ORDER BY tagente_modulo.flag DESC, time_left DESC, tagente_estado.last_execution_try ASC ', $pa_config->{'servername'});
@@ -108,8 +109,9 @@ sub data_producer ($) {
 		AND tagente.disabled = 0
 		AND tagente_modulo.disabled = 0
 		AND tagente_modulo.id_tipo_modulo > 4
-		AND tagente_modulo.id_tipo_modulo < 19
-		AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
+		AND tagente_modulo.id_tipo_modulo < 19'
+		. enterprise_hook ('get_network_filter', []) .
+		'AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
 		AND (tagente_modulo.flag = 1 OR ((tagente_estado.last_execution_try + tagente_estado.current_interval) < UNIX_TIMESTAMP()))
 		ORDER BY tagente_modulo.flag DESC, time_left DESC, tagente_estado.last_execution_try ASC', $pa_config->{'servername'});
 	}
