@@ -1,3 +1,11 @@
+2011-06-20  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Config.pm,,
+	  lib/PandoraFMS/NetworkServer.pm: Added a new ICMP server (enterprise).
+
+	* lib/PandoraFMS/Core.pm: Reset action thresholds when an alert
+	  recovers.
+
 2011-06-20  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/DB.pm: Added quotes to process
